--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#CCCCCC</color>
 
+    <color name="pink_300">#FF4040</color>
+    <color name="gray_500">#6F7479</color>
+    <color name="gray_200">#F5EFEF</color>
+
 </resources>
