--- a/app/src/main/res/drawable/ic_info.xml
+++ b/app/src/main/res/drawable/ic_info.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
-    android:viewportWidth="48"
-    android:viewportHeight="48">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M22.35,34.3h3.6L25.95,22h-3.6ZM24,18.7q0.9,0 1.475,-0.575 0.575,-0.575 0.575,-1.425 0,-0.95 -0.575,-1.525T24,14.6q-0.9,0 -1.475,0.575 -0.575,0.575 -0.575,1.525 0,0.85 0.575,1.425 0.575,0.575 1.475,0.575ZM24,44.7q-4.3,0 -8.05,-1.625 -3.75,-1.625 -6.575,-4.45t-4.45,-6.575Q3.3,28.3 3.3,24q0,-4.35 1.625,-8.1T9.35,9.35q2.8,-2.8 6.575,-4.45Q19.7,3.25 24,3.25q4.35,0 8.125,1.65 3.775,1.65 6.55,4.425t4.425,6.55Q44.75,19.65 44.75,24q0,4.3 -1.65,8.075 -1.65,3.775 -4.45,6.575 -2.8,2.8 -6.55,4.425T24,44.7Z"/>
+      android:fillColor="@color/gray_400"
+      android:pathData="M10.8,17.2h2.4L13.2,11h-2.4ZM12,9.275q0.55,0 0.913,-0.363 0.362,-0.362 0.362,-0.912t-0.362,-0.913q-0.363,-0.362 -0.913,-0.362t-0.912,0.362q-0.363,0.363 -0.363,0.913t0.363,0.912q0.362,0.363 0.912,0.363ZM12,22.475q-2.2,0 -4.1,-0.825 -1.9,-0.825 -3.312,-2.237Q3.175,18 2.35,16.1q-0.825,-1.9 -0.825,-4.1 0,-2.2 0.825,-4.1 0.825,-1.9 2.238,-3.313Q6,3.175 7.9,2.35q1.9,-0.825 4.1,-0.825 2.2,0 4.1,0.825 1.9,0.825 3.313,2.237Q20.825,6 21.65,7.9q0.825,1.9 0.825,4.1 0,2.2 -0.825,4.1 -0.825,1.9 -2.237,3.313Q18,20.825 16.1,21.65q-1.9,0.825 -4.1,0.825ZM12,19.825q3.3,0 5.562,-2.263Q19.825,15.3 19.825,12q0,-3.3 -2.263,-5.563Q15.3,4.175 12,4.175q-3.3,0 -5.562,2.262Q4.175,8.7 4.175,12t2.263,5.562Q8.7,19.825 12,19.825ZM12,12Z"/>
 </vector>
