--- a/app/src/main/res/layout/fragment_imc.xml
+++ b/app/src/main/res/layout/fragment_imc.xml
@@ -6,64 +6,136 @@
     android:layout_height="match_parent"
     tools:context=".ui.presentation.fragment.ImcFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/myToolBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:elevation="@dimen/elevation"
             app:layout_constraintTop_toTopOf="parent"
-            />
+            app:title="IMC - Índice de massa corporal" />
 
         <TextView
-            android:id="@+id/text_imc_desc"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/horizontal_margin"
-            android:layout_marginTop="16dp"
-            android:text="@string/imc_desc"
-            android:textSize="@dimen/text_size"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edt_weight"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:hint="@string/weight"
-            android:inputType="numberDecimal"
-            android:maxLength="6"
-            android:textSize="@dimen/text_size"
-            app:layout_constraintEnd_toEndOf="@id/text_imc_desc"
-            app:layout_constraintStart_toStartOf="@id/text_imc_desc"
-            app:layout_constraintTop_toBottomOf="@id/text_imc_desc" />
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edt_height"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:hint="@string/height"
-            android:inputType="number"
-            android:maxLength="3"
-            android:textSize="@dimen/text_size"
-            app:layout_constraintEnd_toEndOf="@id/edt_weight"
-            app:layout_constraintStart_toStartOf="@id/edt_weight"
-            app:layout_constraintTop_toBottomOf="@id/edt_weight" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_confirmed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="@string/calc"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edt_height" />
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/marginBorder"
+            android:text="Dados"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_data"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/marginBorder"
+            android:layout_marginVertical="4dp"
+            android:background="@drawable/bg_card"
+            android:elevation="@dimen/elevation">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edt_age"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/marginComponents"
+                    android:hint="@string/age"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edt_weight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/marginComponents"
+                    android:hint="@string/weight"
+                    app:layout_constraintStart_toStartOf="@id/edt_age"
+                    app:layout_constraintTop_toBottomOf="@id/edt_age" />
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edt_height"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/marginComponents"
+                    android:layout_marginBottom="20dp"
+                    android:hint="@string/height"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/edt_weight"
+                    app:layout_constraintTop_toBottomOf="@id/edt_weight" />
+
+                <ImageView
+                    android:id="@+id/iv_men"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:src="@drawable/ic_men"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toStartOf="@+id/iv_woman"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/edt_age" />
+
+                <ImageView
+                    android:id="@+id/iv_woman"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:src="@drawable/ic_woman"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/iv_men"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Resultado"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginHorizontal="@dimen/marginBorder"
+            android:background="@drawable/bg_card"
+            android:elevation="@dimen/elevation">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/tv_result"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="48sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="8dp"
+                    android:text="0"/>
+
+                <ImageView
+                    android:id="@+id/iv_grafic"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/marginBorder"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_result"
+                    android:src="@drawable/ic_grafic"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </ScrollView>
