--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
 
     <color name="pink_300">#FF4040</color>
     <color name="gray_500">#6F7479</color>
+    <color name="gray_400">#919191</color>
     <color name="gray_200">#F5EFEF</color>
 
 </resources>
