--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="pink_300">#FF4040</color>
     <color name="gray_500">#6F7479</color>
     <color name="gray_400">#919191</color>
+    <color name="gray_300">#EAEAEA</color>
     <color name="gray_200">#F5EFEF</color>
 
     <color name="blue_200">#5A619C</color>
