Selected sex mandatory and new edit text

--- a/app/src/main/res/layout/fragment_imc.xml
+++ b/app/src/main/res/layout/fragment_imc.xml
@@ -41,6 +41,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/edt_age"
                     android:layout_width="wrap_content"
@@ -105,7 +116,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/card_result"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="300dp"
             android:layout_marginHorizontal="@dimen/marginBorder"
             android:layout_marginTop="4dp"
             android:background="@drawable/bg_card"
