--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="gray">#CCCCCC</color>
 
     <color name="pink_300">#FF4040</color>
+    <color name="gray_600">#817979</color>
     <color name="gray_500">#6F7479</color>
     <color name="gray_400">#919191</color>
     <color name="gray_300">#EAEAEA</color>
