--- a/app/src/main/res/layout/fragment_imc.xml
+++ b/app/src/main/res/layout/fragment_imc.xml
@@ -46,7 +46,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginEnd="48dp"
+                    android:layout_marginEnd="28dp"
                     android:hint="@string/age"
                     android:textColorHint="@color/gray_600"
                     app:boxStrokeColor="@color/pink_300"
@@ -102,13 +102,13 @@
                     android:id="@+id/layout_edt_height"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
                     android:hint="@string/height"
                     android:textColorHint="@color/gray_600"
                     app:boxStrokeColor="@color/pink_300"
                     app:boxStrokeWidth="1dp"
                     app:boxStrokeWidthFocused="2dp"
                     app:hintTextColor="@color/pink_300"
-                    android:layout_marginBottom="16dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@id/layout_edt_weight"
                     app:layout_constraintStart_toStartOf="@id/layout_edt_weight"
@@ -408,5 +408,16 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/marginBorder"
+            android:layout_marginTop="4dp"
+            android:text="Salvar"
+            android:textAllCaps="false"
+            android:textSize="18sp" />
+
     </LinearLayout>
 </ScrollView>
