--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,21 @@
 
         <item name="android:windowBackground">@color/gray_200</item>
     </style>
+
+    <style name="layoutEdt">
+        <item name="android:textColorHint">@color/gray_600</item>
+        <item name="boxStrokeColor">@color/pink_300</item>
+        <item name="boxStrokeWidth">1dp</item>
+        <item name="boxStrokeWidthFocused">2dp</item>
+        <item name="hintTextColor">@color/pink_300</item>
+    </style>
+
+    <style name="inputEdt">
+        <item name="android:background">@color/white</item>
+        <item name="android:inputType">number</item>
+        <item name="android:textColor">@color/pink_300</item>
+        <item name="android:textCursorDrawable">@color/black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
 </resources>
